--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "PORT=3001 node ./bin/www"
+    "start": "PORT=3001 node ./bin/www",
+    "start:watch": "PORT=3001 nodemon --ignore client --ignore public ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -13,5 +14,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
