--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "react": "^16.0.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "reactstrap": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
