--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "reactstrap": "^4.8.0",
+    "recharts": "^1.0.0-apha.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
