--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "start:watch": "PORT=3001 nodemon --ignore client --ignore public ./bin/www",
-    "build": "cd client && npm run build && cp -r build/* ../public"
+    "build": "rm -rf ./public && mkdir public && cd client && npm run build && cp -r build/* ../public"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
