--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "classname": "0.0.0",
+    "font-awesome": "^4.7.0",
     "ramda": "^0.24.1",
     "react": "^16.0.0",
     "react-addons-css-transition-group": "^15.6.2",
