--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-csp-header": "^2.1.0",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "ramda": "^0.24.1",
