--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
-    "reactstrap": "^4.8.0",
+    "reactstrap": "^5.0.0-beta.2",
     "recharts": "^1.0.0-apha.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
