--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-csp-header": "^2.1.0",
+    "express-range": "^2.0.1",
     "express-session": "^1.15.6",
     "helmet": "^3.9.0",
     "jade": "~1.11.0",
