--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-react-app": "^3.1.1",
     "bootstrap": "^4.0.0",
     "classname": "0.0.0",
     "font-awesome": "^4.7.0",
@@ -22,7 +24,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run build-dist",
+    "build-dist": "NODE_ENV=production babel -d dist src",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
