--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:watch": "PORT=3001 nodemon --ignore client --ignore public ./bin/www",
+    "watch:server": "PORT=3001 nodemon --ignore client --ignore public ./bin/www",
+    "watch:all": "NODE_ENV=development nodemon -i client/dist --exec 'cd client && npm run build-dist && cd .. && node --inspect bin/www'",
     "build": "rm -rf ./public && mkdir public && cd client && npm run build && cp -r build/* ../public"
   },
   "dependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "^3.1.1",
+    "babel-register": "^6.26.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
     "connect-flash": "^0.1.1",
@@ -18,11 +24,16 @@
     "express-range": "^2.0.1",
     "express-session": "^1.15.6",
     "helmet": "^3.9.0",
+    "ignore-styles": "^5.0.1",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "ramda": "^0.24.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "serve-favicon": "~2.4.2",
     "sqlite3": "^3.1.13",
     "twilio": "^3.11.3"
