--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.10",
     "cookie-parser": "~1.4.3",
+    "csv-parse": "^2.0.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-csp-header": "^2.1.0",
