--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "connect-sqlite3": "^0.9.10",
     "cookie-parser": "~1.4.3",
     "csv-parse": "^2.0.4",
-    "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-csp-header": "^2.1.0",
     "express-range": "^2.0.1",
@@ -34,6 +33,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5",
     "serve-favicon": "~2.4.2",
     "sqlite3": "^3.1.13",
     "twilio": "^3.11.3"
