--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "rm -rf ./public && mkdir public && cd client && npm run build && cp -r build/* ../public"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react-app": "^3.1.1",
     "babel-register": "^6.26.0",
@@ -33,7 +34,6 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
-    "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
     "serve-favicon": "~2.4.2",
     "sqlite3": "^3.1.13",
