add peer routes & frontend

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-register": "^6.26.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
+    "chalk": "^2.3.2",
     "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.10",
     "cookie-parser": "~1.4.3",
