add install script

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
     "chalk": "^2.3.2",
+    "clipboardy": "^1.2.3",
     "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.10",
     "cookie-parser": "~1.4.3",
@@ -26,6 +27,7 @@
     "express-session": "^1.15.6",
     "helmet": "^3.9.0",
     "ignore-styles": "^5.0.1",
+    "inquirer": "^5.1.0",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
