--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
 
     "start": "NODE_ENV=production node ./bin/start-profyle",
+
     "watch:server": "NODE_ENV=development PORT=3001 nodemon --ignore client --ignore public ./bin/start-profyle",
     "watch:all": "NODE_ENV=development nodemon -i client/dist --exec 'cd client && npm run build-dist && cd .. && node --inspect bin/start-profyle'",
+    "watch:frontend": "cd client && npm start",
+
     "build": "rm -rf ./public && mkdir public && cd client && npm run build && cp -r build/* ../public",
 
     "postinstall": "cd client && npm install"
