--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "classname": "0.0.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.5",
+    "prop-types": "^15.6.1",
     "react": "^16.0.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
