--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "~1.17.1",
     "chalk": "^2.3.2",
     "clipboardy": "^1.2.3",
+    "compression": "^1.7.2",
     "connect-flash": "^0.1.1",
     "connect-sqlite3": "^0.9.10",
     "cookie-parser": "~1.4.3",
