--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "babel-preset-react-app": "^3.1.1",
     "bootstrap": "^4.0.0",
     "classname": "0.0.0",
+    "cuid": "^2.1.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
