--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "classname": "0.0.0",
     "cuid": "^2.1.1",
     "font-awesome": "^4.7.0",
+    "left-pad": "^1.3.0",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.1",
     "react": "^16.0.0",
